# napari-geojson

./: LICENSE  README.md  mkdocs.yml  setup.cfg  setup.py
docs/: index.md
napari_geojson/: __init__.py  _reader.py
napari_geojson/_tests/: annot.geojson  test_reader.py
