[metadata]
name = napari-geojson
version = 0.0.1
author = Vlad Popovici
author_email = popovici@bioxlab.org

license = MIT
description = A Napari plugin for reading GeoJSON shapes.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    geojson
    shapely

[options.entry_points] 
napari.plugin = 
    napari-geojson = napari_geojson
